--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:gh-pages": "NODE_ENV=production BASE_PATH=\"\" next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
